--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,7 @@ surge_ruleset=🚀𝐒𝐞𝐥𝐞𝐜𝐭,https://raw.githubusercontent.com/ACL
 surge_ruleset=🇸🇬𝐒𝐆,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 surge_ruleset=🇨🇳𝐓𝐖,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
 surge_ruleset=🚀𝐒𝐞𝐥𝐞𝐜𝐭,https://raw.githubusercontent.com/aenstan/myclash/master/rules/proxy.list
+surge_ruleset=🇺🇸𝐔𝐒,https://raw.githubusercontent.com/aenstan/myclash/master/rules/proxy-us.list
 surge_ruleset=🚀𝐒𝐞𝐥𝐞𝐜𝐭,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 surge_ruleset=🚫𝐀𝐝𝐁𝐥𝐨𝐜𝐤,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 surge_ruleset=🚫𝐀𝐝𝐁𝐥𝐨𝐜𝐤,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
