--- a/config.ini
+++ b/config.ini
@@ -23,7 +23,7 @@ surge_ruleset=🐟𝐅𝐢𝐧𝐚𝐥,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=🚀𝐒𝐞𝐥𝐞𝐜𝐭`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
-custom_proxy_group=🔯𝐀𝐮𝐭𝐨`url-test`(V5|4x)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯𝐀𝐮𝐭𝐨`url-test`(HK|JP)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰𝐇𝐊`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬𝐒𝐆`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇨🇳𝐓𝐖`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
