--- a/config2.ini
+++ b/config2.ini
@@ -30,7 +30,7 @@ custom_proxy_group=🇸🇬𝐒𝐆`url-test`(新加坡|坡|狮城|SG|Singapore)
 custom_proxy_group=🇨🇳𝐓𝐖`url-test`(台|新北|彰化|TW|Taiwan)`https://i.ytimg.com/generate_204`30,,50
 custom_proxy_group=🇯🇵𝐉𝐏`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`https://i.ytimg.com/generate_204`30,,50
 custom_proxy_group=🇺🇸𝐔𝐒`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`https://i.ytimg.com/generate_204`30,,50
-custom_proxy_group=🍎𝐀𝐩𝐩𝐥𝐞`select`[]DIRECT
+custom_proxy_group=🍎𝐀𝐩𝐩𝐥𝐞`select`[]🚀𝐒𝐞𝐥𝐞𝐜𝐭`[]DIRECT
 custom_proxy_group=🐟𝐅𝐢𝐧𝐚𝐥`select`[]🚀𝐒𝐞𝐥𝐞𝐜𝐭`[]DIRECT
 custom_proxy_group=🎯𝐃𝐢𝐫𝐞𝐜𝐭`select`[]DIRECT
 custom_proxy_group=🚫𝐀𝐝𝐁𝐥𝐨𝐜𝐤`select`[]REJECT`[]DIRECT
