--- a/config2.ini
+++ b/config2.ini
@@ -1,6 +1,6 @@
 [custom]
 
-ruleset=🚀𝐒𝐞𝐥𝐞𝐜𝐭,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
+ruleset=📲𝐓𝐞𝐥𝐞𝐠𝐫𝐚𝐦,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
 ruleset=🚀𝐒𝐞𝐥𝐞𝐜𝐭,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TikTok.list
 ruleset=🚀𝐒𝐞𝐥𝐞𝐜𝐭,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🇸🇬𝐒𝐆,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
@@ -25,6 +25,7 @@ ruleset=🐟𝐅𝐢𝐧𝐚𝐥,[]FINAL
 
 custom_proxy_group=🚀𝐒𝐞𝐥𝐞𝐜𝐭`select`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
 #custom_proxy_group=🔯𝐀𝐮𝐭𝐨`url-test`.*`https://i.ytimg.com/generate_204`30,,50
+custom_proxy_group=📲𝐓𝐞𝐥𝐞𝐠𝐫𝐚𝐦`select`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏
 custom_proxy_group=🇭🇰𝐇𝐊`url-test`(港|HK|Hong Kong)`https://i.ytimg.com/generate_204`30,,50
 custom_proxy_group=🇸🇬𝐒𝐆`url-test`(新加坡|坡|狮城|SG|Singapore)`https://i.ytimg.com/generate_204`30,,50
 custom_proxy_group=🇨🇳𝐓𝐖`url-test`(台|新北|彰化|TW|Taiwan)`https://i.ytimg.com/generate_204`30,,50
