--- a/config.ini
+++ b/config.ini
@@ -15,8 +15,8 @@ ruleset=🐟𝐅𝐢𝐧𝐚𝐥,[]FINAL
 
 
 custom_proxy_group=🚀𝐒𝐞𝐥𝐞𝐜𝐭`select`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
-custom_proxy_group=🎥𝐍𝐞𝐭𝐟𝐥𝐢𝐱`select`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
-custom_proxy_group=📲𝐓𝐞𝐥𝐞𝐠𝐫𝐚𝐦`select`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
+custom_proxy_group=🎥𝐍𝐞𝐭𝐟𝐥𝐢𝐱`select`[]🇸🇬𝐒𝐆`[]🇭🇰𝐇𝐊`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
+custom_proxy_group=📲𝐓𝐞𝐥𝐞𝐠𝐫𝐚𝐦`select`[]🇸🇬𝐒𝐆`[]🇭🇰𝐇𝐊`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
 custom_proxy_group=🇭🇰𝐇𝐊`url-test`(港|HK|Hong Kong)`https://i.ytimg.com/generate_204`30,,50
 custom_proxy_group=🇸🇬𝐒𝐆`url-test`(新加坡|坡|狮城|SG|Singapore)`https://i.ytimg.com/generate_204`30,,50
 custom_proxy_group=🇨🇳𝐓𝐖`url-test`(台|新北|彰化|TW|Taiwan)`https://i.ytimg.com/generate_204`30,,50
